# BRATS

./: BuildGMM.m  README.md  RFstats.py  atropos.py  atropos.sh  brain_gmm.py  calccsfmean.py  convnet3d.py  dataset.py  features.py  main.py  mha.py  normalise_single.py  normalize_single.py  normalizeall.py  plthistogram.py  predictRF.py  runGMM.m  trainRF.py  truth.py
2D CNN/: classesCNN.py  readPatMS.py  runCNN.py
CSFMean/: CMakeLists.txt  csfmean.cxx
ExtractFeatures/: CMakeLists.txt  CMakeLists.txt~  ExtractFeatures.cxx
MS CNN/: conv3d2d.py  convNetReadME.txt  convnet3d.py  maxpool3d.py  predictCNN.py  readPatMS.py  runCNN.py
Mask/: CMakeLists.txt  Mask.cxx  MaskLabel.sh
N4Bias/: CMakeLists.txt  N4Bias.cxx
Neighborhood Features/: CMakeLists.txt~  NeighborhoodFeatures.cxx
Normalization/: CMakeLists.txt  Normalization.cxx
patient1/: BRATS_HG0001_truth.mha
